--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -107,3 +107,28 @@
   background-size: cover
   background-size: 100% 100%
   background-repeat: no-repeat
+.bgg
+  background-color: #E8E8E8
+.bgh
+  background-color: #F3F9FF
+.wi8
+  width: 30%
+.bgpa
+  background-image: url("../assets/curso/tema8/bg1.png") !important
+  background-size: cover
+  margin-inline: -3.4rem
+  padding: 50px
+  background-repeat: no-repeat
+  background-size: 100% 100%
+  @media screen and ( max-width: 992px)
+    background-size: cover
+    margin-inline: -2.5rem 
+.coloras
+  background-color: white
+  border-radius: 10px
+.lista-ul--color li > i:first-of-type
+  color: #0540B7
+.colort8
+  background-color: #FAEDC0
+.colort9
+  background-color: #DEE4F0
